Organized projects into folders

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -64,11 +64,11 @@
 
         <!-- Landing Page -->
         <li class="project-item">
-          <img src="landingPg.png" alt="Landing Page" class="project-img" />
+          <img src="landingPage.png" alt="Landing Page" class="project-img" />
           <div class="project-info">
             <span class="project-title">🖥 Landing Page</span><br />
             <a
-              href="https://github.com/Priyanshiikh/CODSOFT/tree/main/Landing%20page"
+              href="https://github.com/Priyanshiikh/CODSOFT/tree/main/Landingpage"
               target="_blank"
               >View on GitHub</a
             >
