Orgnized folder structure for Portfolio, Landing Page, and Calculator

--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -55,7 +55,7 @@
           <div class="project-info">
             <span class="project-title">🌐 Portfolio Website</span><br />
             <a
-              href="https://github.com/Priyanshiikh/CODSOFT/tree/main/portfolio"
+              href="https://github.com/Priyanshiikh/CODSOFT/tree/main/Portfolio"
               target="_blank"
               >View on GitHub</a
             >
@@ -64,7 +64,7 @@
 
         <!-- Landing Page -->
         <li class="project-item">
-          <img src="landingPage.png" alt="Landing Page" class="project-img" />
+          <img src="landingPg.png" alt="LandingPage" class="project-img" />
           <div class="project-info">
             <span class="project-title">🖥 Landing Page</span><br />
             <a
